# ampa

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  audit_text.txt  package-lock.json  pyproject.toml  tmp_wl_list.json  tmp_wl_show.json  tmux.windows.conf.yaml
.githooks/: post-merge
.github/workflows/: ci.yml
.opencode/skill/: install-ampa
.worklog/: worklog-data.jsonl
.worklog/ampa/: .env
ampa/: __init__.py
docs/: developer-guide-status-integration.md  operator-guide-input-needed.md  operator-guide-intake-runner.md  scheduler-local-llm.md
docs/specs/: worklog-feature-request-input-needed-status.md
docs/workflow/: workflow-schema.json  workflow.json  workflow.yaml
plan/: detection.py  wl_adapter.py
scripts/: __init__.py  list-merged-branches.sh  tmux.sh  tmux.windows.conf  tmux.windows.conf.example
scripts/cleanup/: README.md  __init__.py  cleanup_stale_remote_branches.py  lib.py  prune_local_branches.py
skill/: __init__.py
skill/audit/: SKILL.md
skill/cleanup/: SKILL.md
skill/code_review/: SKILL.md
skill/command-authoring/: SKILL.md
skill/effort_and_risk/: SKILL.md  comment.txt  final.json  issue.json
skill/find_related/: SKILL.md
src/: discord_bot.py  docs  notifications.py  pr_monitor.py  scheduler_helpers.py  scheduler_schema.md  scheduler_store.py
tests/: INSTALLER_TESTS.md  conftest.py  install-worklog-plugin.bats  run-installer-tests.js  test-installer-manual.sh  test_assignment_lookup.py  test_audit_handlers.py  test_audit_persistence.py  test_audit_poller.py  test_audit_poller_additional.py  test_audit_result.py  test_auto_delegate.py  test_bot_supervision.py  test_candidates.py  test_check_or_create_critical.py  test_check_or_create_integration.py  test_cleanup_integration.py  test_cleanup_scripts.py  test_commands.py  test_conversation_manager.py  test_core.py  test_delegation_dispatch.py  test_delegation_output.py  test_delegation_report_comprehensive.py  test_delegation_report_dedup.py  test_descriptor.py  test_detection.py  test_detection_module.py  test_discord_bot.py  test_dispatch.py  test_dry_run_reporting.py  test_engine_agent_hint.py  test_engine_integration.py  test_error_report.py  test_fallback.py  test_filter_by_cooldown.py  test_format_in_progress_items.py  test_hung_child_recovery.py  test_idle_delegation.py  test_infer_owner.py  (+39 more)
(+103 files in other folders)
