[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ampa"
version = "0.1.0"
description = "Automated Project Management Agent for OpenCode"
authors = ["OpenCode <hello@opencode.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opencode/ampa"
repository = "https://github.com/opencode/ampa"
documentation = "https://github.com/opencode/ampa/tree/main/docs"
keywords = ["project-management", "automation", "opencode", "worklog", "discord"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Project Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "ampa"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies will be added during migration
# aiohttp = "^3.9.0"
# discord-py = "^2.3.0"
# python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
ampa-daemon = "ampa.daemon:main"
ampa-scheduler = "ampa.scheduler_cli:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
